# QuOCS

./: .gitignore  .yapfignore  MANIFEST.in  QuOCSConstants.py  README.md  job_handler.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_OptimizationSuiteGUI.py
Communication_Files/: Comm_FoM_Qubit_AllInOne_Test.json  Comm_FoM_Qubit_Local_Test.json  Comm_FoM_Rosenbrock_AllInOne_Test.json  Comm_FoM_Rosenbrock_Local_Test.json
Configuration_Files/: Config_QubitTransfer_Test.json  Config_Rosenbrock_Test.json
Documentation/: Customization.md  Enforcing_Pulse_Boundaries_at_Beginning_and_End.md  Settings_in_Optimization_Dict.md
Examples/: 2level_system.ipynb  AD_equinox_optax.ipynb  IsingModelProblem.py  IsingModelProblem_AD.py  IsingModelProblem_AD_Lindblad.py  IsingModelProblem_Lindblad.py  IsingModelProblem_noise.py  Ising_AD_Equinox.ipynb  LindbladProblem.py  execute_AD.py  execute_AD_Fourier.py  execute_AD_Lindblad.py  execute_GRAPE.py  execute_Lindblad.py  execute_dCRAB.py  settings_AD.json  settings_AD_Fourier.json  settings_AD_Lindblad.json  settings_GRAPE.json  settings_LindbladProblem.json  settings_dCRAB.json  settings_dCRAB_sig.json  testimporting.py
OptimalControlProblems/: OneQubitClass.py  Rosenbrock.py  RosenbrockClass.py  su2.py
OptimizationCode/: ServerHandler.py
Other/: check_version_change.yml
docs/: genindex.html  quocslib.handleexit.rst  quocslib.optimalalgorithms.rst  quocslib.optimalcontrolproblems.rst  quocslib.rst  quocslib.tools.rst  search.html  searchindex.js
docsource/: Makefile  conf.py  index.md  index.rst  readme.md  recreate_docs.sh
logo/: logo_quocs_bw.ai  logo_quocs_color.ai
quocs_optlib/: Controls.py  Optimizer.py
quocs_optlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
quocslib/: Optimizer.py  __init__.py
tests/: algorithm_dictionary.json  algorithm_dictionary_PureParameter_CMAES_Rosenbrock.json  algorithm_dictionary_dCRABNoisy.json  algorithm_dictionary_dCRABNoisy_only_compensation_Random_Generator.json  algorithm_dictionary_shaping_option_list_Walsh_basis.json  algorithm_dictionary_sigmoid.json  algorithm_dictionary_v3.json  algorithm_dictionary_v4.json  algorithm_dictionary_v4_shaping_option_list_mode.json  algorithm_dictionary_v4_shrink_option.json  controls_dictionary.json  controls_dictionary_v2.json  controls_dictionary_v3.json  dCRAB_Fourier_NM_OneQubit.json  dCRAB_Fourier_NM_OneQubit_Noisy.json  dCRAB_Fourier_NM_OneQubit_json_dump.json  fom.txt  mixed_dCRAB_Fourier_NM_OneQubit.json  muh.py  my_file_with_functions.py  one_pulse_two_times.json  opt_Rosen_NM.json  qubit_evaluation_test.py  test_AD_Ising_Model.py  test_GRAPE_Ising_Model.py  (+35 more)
(+456 files in other folders)
