[metadata]
name = quocs-lib
version = 0.0a7
author = QuOCS Team
author_email = quantum.optimal.cs@gmail.com
description = QuOCS (Quantum Optimal Control Suite) library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Quantum-OCS/QuOCS
project_urls =
    Bug Tracker = https://github.com/Quantum-OCS/QuOCS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy
    scipy

[options.packages.find]
where=src
